--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-switch": "^7.0.0",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.34",
+    "@types/uuid": "^9.0.8",
     "json-server": "^1.0.0-alpha.23"
   }
 }
