--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
+    "moment": "^2.30.1",
     "pdfmake": "^0.2.10",
     "polished": "^4.3.1",
     "react": "^18.2.0",
